# Daily-todos-app

./: README.md
backend/todo-app/: README.md  pyproject.toml
backend/todo-app/tests/: test_main.py
backend/todo-app/todo_app/: auth.py  db.py  main.py  models.py  setting.py
backend/todo-app/todo_app/router/: user.py
frontend/: package-lock.json  package.json  types.d.ts
frontend/src/actions/: actions.ts
frontend/src/app/: page.tsx
frontend/src/components/: SubmitButton.tsx
frontend/src/components/ui/: AddTask.tsx  EditTask.tsx  Modal.tsx  Task.tsx  TodoTable.tsx  tooltip.tsx
