[tool.poetry]
name = "todo-app"
version = "0.1.0"
description = ""
authors = ["Talha Shafique <talhashafique292@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"
sqlmodel = "^0.0.22"
psycopg = {extras = ["binary"], version = "^3.2.2"}
pytest = "^8.3.3"
httpx = "^0.27.2"
python-multipart = "^0.0.12"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
types-python-jose = "^3.3.4.20240106"
types-passlib = "^1.7.7.20240819"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
